@@ -1,6 +1,7 @@
 44
 ================
 
+26/09/20 Consistent keyboard handling for alphanumber widget #914
 25/09/20 Email address books #179
 25/09/20 Add HomeCheckedDate person wordkey
 24/09/20 Use pickup address and brought in by when lost->shelter matching
